Add image analysis and test